FLVStreamer
Copyright 2008-2009 Andrej Stepanchuk, The Flvstreamer Team; Distributed under the GPL v2

31 Jul 2009, v1.8i

- Added --hashes option to show download progress using '#' characters

- Sanitized newlines in informational messages to stderr

- Fixed minor time offset reporting bug

30 Jul 2009, v1.8h

- Download progress updates less frequently which puts less CPU load an some systems.

- Fix to allow win32 to use binary mode on stdout.

28 Jul 2009, v1.8g

- Backed-out upstream libRTMP change added in 1.8e which called SendCheckBW when onBWDone was received - Caused 10060 recv error on win32

28 Jul 2009, v1.8f

- Added endian detection for PPC MacOSX in bytes.h

- New MakefileOSX which will create universal binaries for Mac (intel and PPC)

- Don't treat notify packets as media packets

- Ensure that flvstreamer always returns a non-zero exit code for <= 99.9% complete non-live streams that report a duration

- Fix endian define typo

- Add empty object to end of connect request

- The --stop option now also uses the play function to specify the length to stream to play. This allows the option to work better for some streams

- Added sanity checking for the --start and --stop options

- Times are now reported in seconds for readability

12 Jul 2009, v1.8e

- Changed the audioCodecs list to match flash player 10

- Merge some upstream changes from libRTMP XBMC linuxport

- Fixed small bug in handshake response

10 Jul 2009, v1.8d

- Display flv stream metadata in non-verbose modes

- Ported flvstreamer fixes and features to streams.cpp

7 Jul 2009, v1.8c

- Added --stop <secs> and --start <secs> options to specify absolute start and stop offset timestamps for a stream

- The --stop option can be used to specify the duration of live streaming

- Progress additionally displays timestamp in seconds

6 Jul 2009, v1.8b

- Exit codes now reflect success of download. 

- non-zero exit code for incomplete downloads even if stream duration is unknown.
